# MasterthesisAnalytics

./: README.md  page_times.py  pyproject.toml
data/: all_apps_wide-2026-02-02.csv  all_apps_wide-2026-02-04.csv  main_trials_2026-02-02.csv  participants_with_condition.csv
data/raw/: PageTimes-2026-02-05.csv  all_apps_wide-2026-02-04.csv  all_apps_wide-2026-02-13.csv  all_apps_wide-2026-02-21.csv  all_apps_wide-2026-02-25.csv  all_apps_wide-2026-02-27.csv  all_apps_wide-2026-02-28.csv  all_apps_wide-2026-03-01.csv  all_apps_wide-2026-03-02.csv  all_apps_wide-2026-03-04.csv  all_apps_wide-2026-03-05.csv  all_apps_wide-2026-03-06.csv  all_apps_wide-2026-03-09.csv  all_apps_wide-2026-03-10.csv  all_apps_wide-2026-03-11.csv  all_apps_wide-2026-03-12.csv  all_apps_wide-2026-03-13.csv  all_apps_wide-2026-03-20.csv  all_apps_wide-synthetic_experiment_data.csv
src/: accuracy.py  case_difficulty.py  confidence_calibration.py  confidence_calibration2.py  confidence_calibration3.py  control_measures.py  main.py  reliance.py  switching_behaviour.py  switching_behaviour2.py  trust.py
src/confidence_calibration/: __init__.py  instance_level.py  task_level.py
src/config/: __init__.py  paths.py
src/data_loader/: __init__.py  load_data.py
src/figures/: __init__.py  figure_plotter.py
src/hypothesis_testing/: __init__.py  hypothesis_2.py  hypothesis_testing.py
src/inspect_data/: __init__.py  confidence_inspector.py  inspect_data.py  inspect_main_trial.py
src/synthetic_data_generator/: data_generator.py
src/variable_constructer/: __init__.py  construct_variables.py
(+12 files in other folders)
