[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy-stubs (>=1.17.0,<1.18.0)",
    "scikit-posthocs (>=0.12.0,<0.13.0)",
    "pingouin (>=0.6.0,<0.7.0)",
    "sns (>=0.1,<0.2)",
    "bambi (>=0.17.2,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
